# platform

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  UseMultiArch.cmake  kodiplatform-config.cmake.in  kodiplatform.pc.in  p8-platform-config.cmake.in  p8-platform.pc.in  platform-config.cmake.in  platform.pc.in
debian/: changelog  changelog.in  control  copyright  libkodiplatform-dev.install  libp8-platform-dev.install  libplatform-dev.install
src/: os.h
src/posix/: os-socket.h  os-threads.h  os-types.h
src/sockets/: cdevsocket.h  socket.h  tcp.h
src/threads/: atomics.h  mutex.h  threads.h
src/util/: StdString.h  StringUtils.cpp  StringUtils.h  XMLUtils.h  timeutils.h
src/windows/: CharsetConverter.cpp  CharsetConverter.h  dlfcn-win32.cpp  inttypes.h  os-socket.h  os-threads.cpp  os-threads.h  os-types.h  stdint.h
windows/: build-lib.cmd  build.cmd
